src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_terminal_mode_input_after_overlay__zellij.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
[minput-ready
[minput-bytes: 1b 4f 41 1b 5b 32 30 30 7e 70 61 73 74 65 64 20 74 65 78 74 1b 5b 32 30 31 7e 1b 5b 49 1b 5b 3c 30 3b 33 3b 34 4d
[minput-done



















[m
